# mandelbrot-comparison

./: .gitignore  Makefile  Manifest.toml  Project.toml  entangled.dhall  pyproject.toml
data/: mandelbrot.toml
docs/: make.jl
docs/src/: index.md  julia.md  python.md
src/: Mandelbrot.jl  create_timings.sql
src/python/mandelbrot/: __init__.py  bounding_box.py  config.py  domain_splitting.py  numba.py  plotting.py  py.typed  timeit.py  vectorized.py
