[tool.poetry]
name = "mandelbrot"
version = "0.1.0"
description = "Comparison between Python, Julia, C++, Rust and Haskell for computing a Mandelbrot fractal."
authors = ["Johan Hidding <j.hidding@esciencecenter.nl>"]
license = "Apache-2"
packages = [{include = "mandelpy", from = "src/python"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.5"
numba = "^0.56.4"
tqdm = "^4.64.1"
matplotlib = "^3.6.2"
argh = "^0.26.2"
numba-progress = "^0.0.4"
psutil = "^5.9.4"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
ipython = "^8.6.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
